{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 65,
  "lineage": "94e7c533-7ac6-f3d8-b860-882bc191d7bd",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:827518711034:loadbalancer/app/ex-alb-alb/318baa26492374d5",
            "arn_suffix": "app/ex-alb-alb/318baa26492374d5",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ex-alb-alb-1153508855.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:827518711034:loadbalancer/app/ex-alb-alb/318baa26492374d5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ex-alb-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-038f3911856d9ad8b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-078b678f78ed1151b"
              },
              {
                "subnet_id": "subnet-0db079eabd113ccee"
              },
              {
                "subnet_id": "subnet-0e17f030e2573d872"
              }
            ],
            "subnets": [
              "subnet-078b678f78ed1151b",
              "subnet-0db079eabd113ccee",
              "subnet-0e17f030e2573d872"
            ],
            "vpc_id": "vpc-0cbe2cb629db1de5c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_security_group.lb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:827518711034:listener/app/ex-alb-alb/318baa26492374d5/6c200d26bbf4e3ba",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:827518711034:targetgroup/alb-TG/5d4eab3e63805230",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:827518711034:listener/app/ex-alb-alb/318baa26492374d5/6c200d26bbf4e3ba",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:827518711034:loadbalancer/app/ex-alb-alb/318baa26492374d5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_lb.lb",
            "module.alb.aws_lb_target_group.lb_target_group",
            "module.alb.aws_security_group.lb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:827518711034:targetgroup/alb-TG/5d4eab3e63805230",
            "arn_suffix": "targetgroup/alb-TG/5d4eab3e63805230",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:827518711034:targetgroup/alb-TG/5d4eab3e63805230",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cbe2cb629db1de5c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827518711034:security-group/sg-038f3911856d9ad8b",
            "description": "Allow SSH and TLS inbound traffic",
            "egress": [],
            "id": "sg-038f3911856d9ad8b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ex-alb-alb-sg",
            "name_prefix": "",
            "owner_id": "827518711034",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cbe2cb629db1de5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827518711034:network-acl/acl-0ffd53ac5ce2cb28c",
            "default_network_acl_id": "acl-0ffd53ac5ce2cb28c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ffd53ac5ce2cb28c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "827518711034",
            "subnet_ids": [
              "subnet-078b678f78ed1151b",
              "subnet-0db079eabd113ccee",
              "subnet-0e17f030e2573d872"
            ],
            "tags": {
              "Example": "ex-alb",
              "Name": "ex-alb-default"
            },
            "tags_all": {
              "Example": "ex-alb",
              "Name": "ex-alb-default"
            },
            "vpc_id": "vpc-0cbe2cb629db1de5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827518711034:route-table/rtb-0ef4f8370f000b3b1",
            "default_route_table_id": "rtb-0ef4f8370f000b3b1",
            "id": "rtb-0ef4f8370f000b3b1",
            "owner_id": "827518711034",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Example": "ex-alb",
              "Name": "ex-alb-default"
            },
            "tags_all": {
              "Example": "ex-alb",
              "Name": "ex-alb-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0cbe2cb629db1de5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827518711034:security-group/sg-076fb004e15b5a238",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-076fb004e15b5a238",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "827518711034",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "ex-alb",
              "Name": "ex-alb-default"
            },
            "tags_all": {
              "Example": "ex-alb",
              "Name": "ex-alb-default"
            },
            "vpc_id": "vpc-0cbe2cb629db1de5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827518711034:internet-gateway/igw-04e931a9921563e5d",
            "id": "igw-04e931a9921563e5d",
            "owner_id": "827518711034",
            "tags": {
              "Example": "ex-alb",
              "Name": "ex-alb"
            },
            "tags_all": {
              "Example": "ex-alb",
              "Name": "ex-alb"
            },
            "vpc_id": "vpc-0cbe2cb629db1de5c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04e931a9921563e5d",
            "id": "r-rtb-094c03b077ebeed401080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-094c03b077ebeed40",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827518711034:route-table/rtb-094c03b077ebeed40",
            "id": "rtb-094c03b077ebeed40",
            "owner_id": "827518711034",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "ex-alb",
              "Name": "ex-alb-public"
            },
            "tags_all": {
              "Example": "ex-alb",
              "Name": "ex-alb-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbe2cb629db1de5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f096336148385e2",
            "route_table_id": "rtb-094c03b077ebeed40",
            "subnet_id": "subnet-0e17f030e2573d872"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f844beb6f3d1418f",
            "route_table_id": "rtb-094c03b077ebeed40",
            "subnet_id": "subnet-078b678f78ed1151b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05395db1e6f0c3b89",
            "route_table_id": "rtb-094c03b077ebeed40",
            "subnet_id": "subnet-0db079eabd113ccee"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827518711034:subnet/subnet-0e17f030e2573d872",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e17f030e2573d872",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "827518711034",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-alb",
              "Name": "ex-alb-public-us-east-1a"
            },
            "tags_all": {
              "Example": "ex-alb",
              "Name": "ex-alb-public-us-east-1a"
            },
            "vpc_id": "vpc-0cbe2cb629db1de5c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827518711034:subnet/subnet-078b678f78ed1151b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078b678f78ed1151b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "827518711034",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-alb",
              "Name": "ex-alb-public-us-east-1b"
            },
            "tags_all": {
              "Example": "ex-alb",
              "Name": "ex-alb-public-us-east-1b"
            },
            "vpc_id": "vpc-0cbe2cb629db1de5c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827518711034:subnet/subnet-0db079eabd113ccee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db079eabd113ccee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "827518711034",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-alb",
              "Name": "ex-alb-public-us-east-1c"
            },
            "tags_all": {
              "Example": "ex-alb",
              "Name": "ex-alb-public-us-east-1c"
            },
            "vpc_id": "vpc-0cbe2cb629db1de5c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827518711034:vpc/vpc-0cbe2cb629db1de5c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ffd53ac5ce2cb28c",
            "default_route_table_id": "rtb-0ef4f8370f000b3b1",
            "default_security_group_id": "sg-076fb004e15b5a238",
            "dhcp_options_id": "dopt-067e434b9f487f65f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cbe2cb629db1de5c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ef4f8370f000b3b1",
            "owner_id": "827518711034",
            "tags": {
              "Example": "ex-alb",
              "Name": "ex-alb"
            },
            "tags_all": {
              "Example": "ex-alb",
              "Name": "ex-alb"
            }
          }
        }
      ]
    }
  ]
}